--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         .page:last-child {
             border-bottom: none;
         }
+
         .image-placeholder {
             border: 8px solid #FFFFFF;
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
@@ -35,9 +36,21 @@
             text-align: center;
             padding: 1rem;
             border-radius: 12px;
+            /* Force 720x960 aspect ratio (3:4) */
             width: 100%;
-            height: 350px;
+            max-width: 540px; /* Maximum width to maintain readability */
+            aspect-ratio: 3/4; /* This maintains the 720x960 ratio */
+    
+    /* Ensure images fit properly */
             overflow: hidden;
+            position: relative;
+        }
+
+        .image-placeholder img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain; /* Ensures entire image is visible without cropping */
+            object-position: center;
         }
         .story-text {
             color: #004D40; /* Dark Teal */
